# DX12Project

./: .gitignore  CMakeLists.txt
DX12API/: BasicGeometry.cpp  BasicGeometry.h  BuildResource.h  DX12APP.cpp  DX12App.h  DXGameTimer.cpp  DXGameTimer.h  Effect.h  EffectHelper.h  FrameResource.cpp  FrameResource.h  GeometryGenerator.cpp  GeometryGenerator.h  MessageLogContext.h  MessageLogger.cpp  MessageLogger.h  ModelManager.cpp  ModelManager.h  RenderState.cpp  RenderState.h  SkinnedData.h  Transform.h  UploadBuffer.h  Vertex.cpp  Vertex.h  d3dDebug.cpp  d3dDebug.h  d3dDebugLogger.h  d3dUtil.h
DX12API/MathHelper/: MathHelper.h
DX12API/TextureLoader/: DDSTextureLoader.cpp  DDSTextureLoader.h  TextureData.cpp  TextureData.h  WICTextureLoader.cpp  WICTextureLoader.h
Example/Chapter 1 Direct3D Initialization/: CMakeLists.txt
Example/Chapter 1 Direct3D Initialization/Game/: GameApp.cpp  GameApp.h
Example/Chapter 2 Add ImGui/DX12API/TextureLoader/: WICTextureLoader.h
Example/Chapter 2 Add ImGui/ImGui/: CMakeLists.txt
Example/Chapter 3 Drawing A Cube/DX12API/: UploadBuffer.h
Example/Chapter 3 Drawing A Cube/Game/: GameApp.cpp
Example/Chapter 3 Drawing A Cube/HLSL/: 06_color_vs.hlsl
Example/Chapter10 Model_1/DX12API/: Effect.h  FrameResource.cpp  FrameResource.h  ModelManager.cpp  ModelManager.h  Transform.cpp  d3dDebugLogger.cpp
Example/Chapter10 Model_1/Game/: GameApp.cpp
Example/Chapter10 Model_1/HLSL/: LightHelper.hlsli
Example/Chapter4 Drawing Shapes/: CMakeLists.txt
Example/Chapter4 Drawing Shapes/DX12API/: FrameResource.cpp  FrameResource.h
Example/Chapter4 Drawing Shapes/Game/: GameApp.cpp  GameApp.h
Example/Chapter5 Waves And Land/: CMakeLists.txt
Example/Chapter5 Waves And Land/DX12API/: FrameResource.cpp  d3dUtil.h
Example/Chapter5 Waves And Land/DX12API/TextureLoader/: WICTextureLoader.cpp
Example/Chapter5 Waves And Land/Game/: GameApp.cpp  Wave.h
Example/Chapter5 Waves And Land/HLSL/: 07_color_vs.hlsl
Example/Chapter6 LightWaves/: CMakeLists.txt
Example/Chapter6 LightWaves/DX12API/: FrameResource.h  d3dUtil.h
Example/Chapter6 LightWaves/Game/: GameApp.cpp  GameApp.h  Wave.cpp
Example/Chapter6 LightWaves/HLSL/: Basic.hlsli
Example/Chapter7 Tex/DX12API/: FrameResource.cpp
Example/Chapter7 Tex/Game/: GameApp.h
Example/Chapter7 Tex/HLSL/: 07_basic.hlsli  07_color_vs.hlsl  Light_ps.hlsl
Example/Chapter7_1 TexLandWave/: CMakeLists.txt
Example/Chapter7_1 TexLandWave/DX12API/: DX12App.h  DXGameTimer.cpp  DXGameTimer.h  GeometryGenerator.h  WinAPISetting.h  d3dUtil.cpp  d3dUtil.h  d3dx12.h
Example/Chapter7_1 TexLandWave/Game/: DX12Project.cpp  GameApp.cpp
Example/Chapter7_1 TexLandWave/HLSL/: 07_color_ps.hlsl  Basic.hlsli  Light_vs.hlsl  Material_ps.hlsl  color_vs.hlsl
Example/Chapter7_1 TexLandWave/ImGui/: ImGui.vcxproj.filters
Example/Chapter7_2 TexShapes/: CMakeLists.txt
Example/Chapter7_2 TexShapes/DX12API/: FrameResource.h
Example/Chapter7_2 TexShapes/Game/: GameApp.cpp  GameApp.h
Example/Chapter7_2 TexShapes/HLSL/: color_ps.hlsl
Example/Chapter8 Blend/DX12API/: DX12APP.cpp  FrameResource.h
Example/Chapter8 Blend/Game/: GameApp.cpp  GameApp.h  Wave.cpp  Wave.h
Example/Chapter8 Blend/ImGui/: ImGui.vcxproj
Example/Chapter9 Stenciling/: CMakeLists.txt
Example/Chapter9 Stenciling/DX12API/: DX12APP.cpp  GeometryGenerator.cpp  RenderHelper.h
Example/Chapter9 Stenciling/Game/: GameApp.cpp  GameApp.h
Example/Chapter9 Stenciling/HLSL/: Material_ps.hlsl
Example/ModelTest_1/: GameApp.cpp  GameApp.h  ModelManager.cpp  ModelManager.h  SkinnedData.cpp  d3dUtil.h
Example/ModelTest_2/DX12API/: BuildResource.cpp  Camera.cpp  DX12App.h  FrameResource.h  ModelManager.cpp  ModelManager.h  RenderState.cpp  RenderState.h  d3dUtil.h
Example/ModelTest_2/Game/: Camera.h  GameApp.cpp  GameApp.h
Game/: DX12Project.cpp  GameApp.cpp  GameApp.h  GameObject.cpp  GameObject.h
HAL_3DModels/model/: helicopter000.x
HLSL/: 06_basic.hlsli  06_color_ps.hlsl  06_color_vs.hlsl  07_color_ps.hlsl  Basic.hlsli  LightHelper.hlsli  Material_ps.hlsl
ImGui/: INSTALL.vcxproj  INSTALL.vcxproj.filters  ImGui.vcxproj  ImGui.vcxproj.filters  cmake_install.cmake  imgui.ini
ImGui/ImGui.dir/Debug/: ImGuid.lib.recipe
ImGui/ImGui.dir/Debug/ImGui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ImGui.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
testDebug/: Debug.cpp  Debug.h  MessageLogger.cpp  MessageLogger.h
